--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "keys.js",
   "dependencies": {
     "axios": "^0.19.0",
-    "dotenv": "^8.0.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^8.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
