--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "keys.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "core-util-is": "^1.0.2",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1"
   },
